paper_experimental_results/2026-05-10T00-24-35/grok-code-fast-1/declarations/type_def_2/sample_001/target.compile.log
error[E0106]: missing lifetime specifier
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/declarations/type_def_2/sample_001/target.rs:12:12
   |
12 | type Tp1 = &mut S1;
   |            ^ expected named lifetime parameter
   |
help: consider introducing a named lifetime parameter
   |
12 | type Tp1<'a> = &'a mut S1;
   |         ++++    ++

error[E0106]: missing lifetime specifier
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/declarations/type_def_2/sample_001/target.rs:14:12
   |
14 | type Tp2 = &S2;
   |            ^ expected named lifetime parameter
   |
help: consider introducing a named lifetime parameter
   |
14 | type Tp2<'a> = &'a S2;
   |         ++++    ++

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0106`.